# photovault

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  codex_log.md  package-lock.json  package.json  pyproject.toml  requirements.txt
services/photovault-api/: pyproject.toml
services/photovault-api/src/photovault_api/: __init__.py  admin_routes.py  app.py  main.py  media.py  media_preview.py  models.py  routes_client_upload.py  state_store.py  storage_ops.py
services/photovault-api/src/photovault_api/state_store/: __init__.py  in_memory.py  in_memory_catalog.py  in_memory_clients.py  in_memory_uploads.py  postgres.py  postgres_catalog.py  postgres_clients.py  postgres_uploads.py  protocol.py  records.py
services/photovault-api/tests/: test_api_app.py  test_purge_trash_script.py  test_state_store.py
services/photovault-client-ui/: pyproject.toml
services/photovault-client-ui/src/photovault_client_ui/: __init__.py  api_client.py  app.py  constants.py  context_loaders.py  main.py  page_renderers.py  system.py  view_models.py  view_models_jobs.py  view_models_overview.py
services/photovault-client-ui/src/photovault_client_ui/static/: app.css
services/photovault-client-ui/src/photovault_client_ui/templates/: _base.html  _jobs_content.html  (+12 more)
services/photovault-client-ui/tests/: test_client_ui_app.py
services/photovault-clientd/: pyproject.toml
services/photovault-clientd/src/photovault_clientd/: __init__.py  app.py  app_context.py  block_devices.py  db.py  engine.py  events.py  hashing.py  ingest_policy.py  m0_checks.py  main.py  networking.py  networking_adapter.py  networking_nmcli.py  networking_types.py  routes_ingest.py  routes_network.py  state_machine.py  storage.py  transitions.py
services/photovault-clientd/tests/: test_auto_progress_loop.py  test_block_devices_api.py  test_block_devices_module.py  test_bootstrap_recovery.py  test_client_identity_auth.py  test_deploy_lifecycle_contract.py  test_event_taxonomy.py  test_ingest_flow.py  test_invariants.py  test_m0_checks.py  test_m1_flow.py  test_m2_handshake.py  test_networking_api.py  test_networking_module.py  test_recovery_matrix.py  test_schema_migrations.py  test_state_machine_contract.py  test_transitions_and_events.py
services/photovault-server-ui/: pyproject.toml
services/photovault-server-ui/src/photovault_server_ui/: __init__.py  api_client.py  app.py  catalog_pages.py  client_pages.py  formatters.py  main.py
services/photovault-server-ui/tests/: test_server_ui_app.py
(+79 files in other folders)
