[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photovault-api"
version = "0.1.0"
description = "photovault server API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "Pillow>=10,<12",
  "psycopg[binary]>=3.1,<4",
  "uvicorn>=0.30,<1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
