[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photovault-client-ui"
version = "0.1.0"
description = "photovault client control UI"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4",
  "httpx>=0.27,<1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
