[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photovault-server-ui"
version = "0.1.0"
description = "photovault server SSR UI"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photovault_server_ui = [
  "templates/*.html",
  "static/app.css",
  "static/vendor/bootstrap/css/bootstrap.min.css",
  "static/vendor/bootstrap/js/bootstrap.bundle.min.js",
  "static/vendor/htmx/htmx.min.js",
]
